--- a/requirements.txt
+++ b/requirements.txt
@@ -5,22 +5,32 @@ certifi==2018.10.15
 chardet==3.0.4
 Click==7.0
 colorama==0.4.0
+cycler==0.10.0
 Flask==1.0.2
 Flask-Script==2.0.6
 gunicorn==19.9.0
 idna==2.7
 isort==4.3.4
 itsdangerous==1.1.0
+jieba==0.39
 Jinja2==2.10
+kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+matplotlib==3.0.2
 mccabe==0.6.1
+numpy==1.15.4
+Pillow==5.3.0
 pprint==0.1
 pylint==2.1.1
+pyparsing==2.3.0
+python-dateutil==2.7.5
 requests==2.20.0
+scipy==1.1.0
 six==1.11.0
 typed-ast==1.1.0
 urllib3==1.24
 Werkzeug==0.14.1
 wincertstore==0.2
+wordcloud==1.5.0
 wrapt==1.10.11
