add web socket and imgur upload

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,46 @@
 astroid==2.0.4
 beautifulsoup4==4.6.3
 bs4==0.0.1
-certifi==2018.10.15
+certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
 colorama==0.4.0
+cycler==0.10.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 Flask-Script==2.0.6
+Flask-SocketIO==3.1.2
 get==1.0.3
 idna==2.7
 isort==4.3.4
 itsdangerous==1.1.0
+jieba==0.39
 Jinja2==2.10
+kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+matplotlib==3.0.2
 mccabe==0.6.1
+numpy==1.16.0
+Pillow==5.4.1
 post==1.0.2
 pprint==0.1
 public==2.0.1
 pylint==2.1.1
+pyparsing==2.3.1
+python-dateutil==2.7.5
+python-engineio==3.2.3
+python-socketio==3.1.1
 query-string==1.0.2
 redis==2.10.6
 requests==2.20.0
 rq==0.12.0
+scipy==1.2.0
 selenium==3.14.1
 six==1.11.0
 typed-ast==1.1.0
 urllib3==1.24
 Werkzeug==0.14.1
 wincertstore==0.2
+wordcloud==1.5.0
 wrapt==1.10.11
